# phantom-streams

./: .gitignore  Anchor.toml  Arcium.toml  BOUNTY_ANALYSIS.md  BUILD_FROM_SPEC.md  CLAUDE_CODE_INSTRUCTIONS.md  CONTEXT.md  Cargo.toml  INSTALL.md  LOCAL_VALIDATION.md  PITCH_NARRATIVE.md  PRODUCTION_INFRASTRUCTURE.md  PRODUCTION_ZK_SPEC.md  README.md  SUBMISSION_CHECKLIST.md  VIDEO_SCRIPT.md  package-lock.json  package.json  run-tests.bat  run-tests.ps1  standalone_demo.js  tsconfig.json  unicorny_demo.js  unicorny_real_demo.js
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: deploy-devnet.yml  test.yml
circuits/: Nargo.toml
circuits/src/: main.nr
client/: package.json
client/src/: index.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/phantom-streams/: Cargo.toml
programs/phantom-streams-arcium/: Cargo.toml
programs/phantom-streams-arcium/src/: lib.rs
programs/phantom-streams/src/: lib.rs
scripts/: demo.ts  install-windows.ps1
tests/: phantom-streams.ts
