[package]
name = "phantom-streams-arcium"
version = "0.1.0"
description = "Phantom Streams - Solana program with Arcium MPC integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phantom_streams_arcium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
arcium-anchor = { version = "0.1" }

[dev-dependencies]
anchor-client = "0.29.0"
