[package]
name = "phantom-streams"
version = "0.1.0"
description = "Private music rights verification on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "phantom_streams"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
